--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios de Informática</title>
+    <title>Bytearg - Servicios de Informática</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -72,7 +72,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 Servicios de Informática. Todos los derechos reservados.@bytearg - Wsp +39 324 878 9213</p>
+        <p>&copy; 2024 Bytearg. @bytearg - Wsp +39 324 878 9213 - Italia, Turin</p>
     </footer>
 </body>
 </html>
