--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <header>
-        <h1>Servicios de Informática</h1>
+        <h1>Bytearg Servicios de Informática</h1>
     </header>
     <section>
         <div class="service">
